# llm-offline-inference

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: __init__.py
llm_offline_inference/: generation_params.py
llm_offline_inference/config/: prompt_formats.py  settings.py
llm_offline_inference/utils/: general.py
src/flex_infer/: __init__.py  evaluation.py  generation_params.py  llm.py  transformers.py  vllm.py
src/flex_infer/config/: __init__.py  prompt_formats.py  prompt_templates.py  settings.py
src/flex_infer/utils/: __init__.py  general.py
tests/: test_generation_params.py  test_llm.py  test_model_settings.py
utils/: __init__.py  general.py
